--- a/package.json
+++ b/package.json
@@ -3,5 +3,23 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "nodemon": "^2.0.20"
-  }
+  },
+  "name": "new-folder",
+  "version": "1.0.0",
+  "main": "script.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SychAndrii/test3.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SychAndrii/test3/issues"
+  },
+  "homepage": "https://github.com/SychAndrii/test3#readme",
+  "description": ""
 }
